# Secure-Distributed-Log-Aggregator-with-tamper-evident-storage

./: Cargo.toml  README.md  logchain.db  logchain.db-shm  logchain.db-wal
agent/: Cargo.toml
agent/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: batch.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs
