[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ed25519-dalek = "2"
sha2 = "0.10"
chrono = "0.4"
notify = "6"


